Too much recursion call stack issue

--- a/map/static/map/style.css
+++ b/map/static/map/style.css
@@ -1,4 +1,7 @@
 #map {
-    height: 600px;
+    height: 700px;
     width: 100%;
+}
+.jumbotron{
+    padding-top: 10px;
 }
